Issue #45 fix: Table wraping

--- a/css/inner.scss
+++ b/css/inner.scss
@@ -202,7 +202,6 @@
     margin: 20px 0;
     width:100%;
     display: block;
-    width: 100%;
     overflow-x: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     > tbody {
@@ -353,3 +352,6 @@ a:hover{cursor:pointer;}
 	width:100%;
 } 
 
+.auto{
+	width:auto !important;
+}
